--- a/Blog.css
+++ b/Blog.css
@@ -41,6 +41,7 @@ body {
     font-size: 44px;
     font-weight: 500;
     line-height: 44px;
+    margin: 48px 0px;
 
 
 }
@@ -57,6 +58,22 @@ body {
 span.recent__update {
     gap: 40px;
     justify-content: start;
+
+}
+
+.UI__Card {
+    border-bottom: 2px solid #E0E0E0;
+    padding-bottom: 16px;
+    margin-bottom: 16px;
+}
+
+.recent__update__pattern {
+    color: var(--light);
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 29px;
+    letter-spacing: 0px;
+
 
 }
 
